# wagtail-tinytableblock

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: publish.yml  ruff.yml  test.yml  zizmor.yml
src/wagtail_tinytableblock/: blocks.py  settings.py  utils.py
src/wagtail_tinytableblock/static/wagtail_tinytableblock/js/: tiny-table-block.js
src/wagtail_tinytableblock/templates/wagtail_tinytableblock/: table_block.html
tests/: test_blocks.py  test_utils.py
tests/testapp/: apps.py  models.py  settings.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/testapp/: table_page.html
